# Intent-Commerce

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  package-lock.json  pencil-new.pen  task-distribution.md
apps/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/backend/src/: config.py  database.py  main.py
apps/backend/src/agents/: shopping_agent.py  tools.py
apps/backend/src/api/: deps.py
apps/backend/src/api/v1/: router.py
apps/backend/src/api/v1/endpoints/: analytics.py  auth.py  chat.py  orders.py  products.py
apps/backend/src/core/: redis.py  security.py
apps/backend/src/embeddings/: pipeline.py
apps/backend/src/forecasting/: engine.py
apps/backend/src/migrations/: env.py
apps/backend/src/models/: __init__.py  base.py  conversation.py  order.py  product.py  user.py  vendor.py
apps/backend/src/services/: chat_service.py  order_service.py  product_service.py
apps/backend/src/worker/: main.py
apps/frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
docs/: README.md  roles.md  video-script.md
docs/architecture/: api-contract.md  data-flow.md  security-model.md
docs/specs/: auth-system.md  cart-checkout.md  demand-forecasting.md  infrastructure.md  nl-analytics.md  product-catalog.md  rag-pipeline.md  shopping-agent.md  vendor-dashboard.md
docs/sprints/: sprint-0.md  sprint-1.md  sprint-2.md  sprint-3.md
infra/nginx/: nginx.conf
infra/postgres/: init.sql
scripts/: generate_browse_catalog.py
(+25 files in other folders)
