[tool.poetry]
name = "intent-commerce-backend"
version = "0.1.0"
description = "FastAPI backend for Intent Commerce"
authors = ["Team Intent <team@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
asyncpg = "^0.29.0"
alembic = "^1.13.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
redis = "^5.0.0"
celery = "^5.4.0"
qdrant-client = "^1.9.0"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
langchain-openai = "^0.1.0"
langgraph = "^0.0.60"
openai = "^1.30.0"
transformers = "^4.41.0"
torch = "^2.3.0"
sentence-transformers = "^3.0.0"
pillow = "^10.3.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
lightgbm = "^4.3.0"
prophet = "^1.1.5"
neuralforecast = "^1.7.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
stripe = "^9.0.0"
email-validator = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
